--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/layout"
-    android:background="#ccc">
+    android:id="@+id/layout">
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -54,9 +53,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/login_text"
         android:id="@+id/textView1"
-        android:layout_above="@+id/userText"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="39dp"
-        android:textColor="#000" />
+        android:layout_marginBottom="78dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/userText" />
 
 </RelativeLayout>
