--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,5 +7,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/onoff"
-        android:id="@+id/darkTheme" />
+        android:id="@+id/darkTheme"
+        android:onClick="onToggleClicked" />
 </LinearLayout>
