--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,63 +6,37 @@
     android:paddingStart="20dp"
     android:paddingEnd="20dp">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Entry 1"
-            android:id="@+id/textView3" />
-
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Entry 2"
-            android:id="@+id/textView2" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Entry 3"
-            android:id="@+id/textView" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Entry 4"
-            android:id="@+id/textView4" />
-    </TableRow>
-
     <TableRow>
 
-        <Button android:text="Toast!"
+        <TextView
+            android:text="Song Title, Song Artist"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_margin="2dp"
+            android:textAlignment="textStart"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:paddingTop="12dp"
+            />
+
+        <Button android:text="Stream"
+            android:padding="10dp"
+            android:layout_margin="2dp"
             android:textColor="#000"
             android:clickable="true"
             android:enabled="true"
             android:background="#00ccff"
-            android:id="@+id/toastButton">
+            android:id="@+id/streamButton">
+
+        </Button>
+
+        <Button android:text="Download"
+            android:padding="10dp"
+            android:layout_margin="2dp"
+            android:textColor="#000"
+            android:clickable="true"
+            android:enabled="true"
+            android:background="#00ccff"
+            android:id="@+id/dlButton">
 
         </Button>
 
