--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,10 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Switch
+    <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/onoff"
+        android:textOn="Light Theme"
+        android:textOff="Dark Theme"
         android:id="@+id/darkTheme"
         android:onClick="onToggleClicked" />
 </LinearLayout>
