--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="1" android:showAsAction="never" />
+        android:orderInCategory="2" android:showAsAction="never" />
     <item android:id="@+id/action_logout" android:title="@string/action_logout"
         android:orderInCategory="100" android:showAsAction="never" />
-    <item android:icon="@android:drawable/ic_menu_search" android:title="@string/action_search"
-        android:showAsAction="always" />
+    <!--<item android:icon="@android:drawable/ic_menu_search" android:title="@string/action_search"
+        android:showAsAction="always" />-->
+    <item android:id="@+id/action_downloaded" android:title="Downloaded Music"
+        android:orderInCategory="1" android:showAsAction="ifRoom" />
 
 </menu>
